--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 html, body {
     height: 100%;
-    width: 100%;
+    min-width: 100%;
 }
 #nav {
     height: 125px;
@@ -63,7 +63,7 @@ video {
 }
 #page1{
     height: 100vh;
-    width: 100%;
+    min-width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
